--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,21 +4,14 @@
   justify-content: center;
   align-items: center;
 
+  @include respond(tab-port) {
+    overflow-x: hidden;
+  }
+
   &__image {
     height: 80%;
     width: 100%;
     position: relative;
-
-    // &::after {
-    //   content: "";
-    //   background: $color-white;
-    //   width: 100%;
-    //   height: 100%;
-    //   position: absolute;
-    //   left: 0;
-    //   top: 0;
-    //   opacity: 0.1;
-    // }
 
     img {
       height: 100%;
